core/keyrx_ffi_macro/tests/ui/fail_nonexistent_domain.stderr
error: failed to load contract for domain 'nonexistent_domain_xyz'. Searched: $WORKSPACE/target/tests/trybuild/keyrx_ffi_macro/src/ffi/contracts/nonexistent_domain_xyz.ffi-contract.json, $WORKSPACE/target/tests/trybuild/src/ffi/contracts/nonexistent_domain_xyz.ffi-contract.json
 --> tests/ui/fail_nonexistent_domain.rs:7:1
  |
7 | #[keyrx_ffi(domain = "nonexistent_domain_xyz")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `keyrx_ffi` (in Nightly builds, run with -Z macro-backtrace for more info)
